samples/_failures_safe/1761176712_bdb7d8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_256dff4b.c: In function ‘main’:
./samples/SAFE/__tmp_256dff4b.c:184:5: error: expected declaration or statement at end of input
  184 |     }
      |     ^
